--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,25 @@ h1 {
     background-color: aqua !important;
 }
 
-.my-navbar {
+.my-navbar h1 {
     background-color: aqua !important;
+}
+
+.sign-up form {
+    margin: 30px auto !important;
+    align-items: center !important;
+    background-color: aquamarine !important;
+    padding: 25px;
+    border-radius: 10px;
+}
+
+.cardContainer {
+    /* background-color: white !important; */
+    margin: 0% !important;
+}
+
+.card-body {
+    background-color: rgb(191, 80, 80) !important;
+    margin: 0% !important;
+    margin-top: 30%;
 }
