--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,14 @@ h1 {
     margin: 0% !important;
     margin-top: 30%;
 }
+
+.navbar-nav {
+    margin-left: auto !important;
+    margin-right: 0 !important;
+}
+
+.navbar img {
+    margin-left: auto !important;
+    margin-right: 0 !important;
+    max-width: 10% !important;
+}
