--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5, h6 {
     justify-items: center; */
 }
 
+.card-body-nest img {
+    max-width: 80px;
+}
+
 .card-body h5 {
     background-color: rgb(128, 136, 238) !important;
     margin: 0% !important;
