improves page layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,40 @@
 body {
-    /* background-color: rgb(255, 255, 255) !important; */
+    background-color: rgb(250, 6, 6) !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
     color: rgb(18, 18, 19);
     font-family: SansPro;
     text-align: center;
+    z-index: 1;
 }
 
 .my-navbar h1 {
     background-color: rgb(74, 81, 182) !important;
 }
 
+.navbar {
+    background-color:rgb(213,176,115) !important;
+    z-index: 1;
+}
 
 
 .cardContainer {
-    background-color: black!important; 
+    /* background-color: black!important;  */
     margin: 0% !important;
-    padding: 10px;
+    padding: 0px;
     align-items: center;
     justify-items: center;
     margin-top: 0%;
+    z-index: 1;
+    background-color: rgb(213,176,115);
 }
 
 .card-text {
     font-size: 1.5em;
 }
+
+
 
 .card-body {
     /* background-color: rgb(128, 136, 238) !important; */
@@ -40,8 +49,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .card-body-nest img {
-    max-width: 80px;
+    max-width: 69px;
 }
+
+
 
 .card-body-nest h5 {
     font-weight: bolder;
@@ -76,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bolder;
 } */
 
+
 .right-background {
     background-image: url(/assets/pexels-thisisengineering-3861972.jpg);
     background-position-y: 62%;
@@ -87,31 +99,56 @@ h1, h2, h3, h4, h5, h6 {
     height: 500px;
 }
 
-/* .card {
-    /* margin: 5% auto;
+.left-background {
+    background-image: url(/assets/pexels-thisisengineering-3861972.jpg);
+    background-position-y: 62%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
     align-items: center;
-    justify-items: center; */
-/* } */ 
+    justify-content:center;
+    height: 500px;
+}
+
+/* .card {
+    margin: 5% auto;
+    align-items: center;
+    justify-items: center;
+}  */
 
 .navbar-nav {
     margin-left: auto !important;
     margin-right: 0 !important;
+    background-color:rgb(213,176,115);
+    z-index: 1;
 }
 
 .card-container {
     align-items: center;
     text-align: center;
+    z-index: 1;   
 }
 
 .navbar img {
     margin-left: auto !important;
     margin-right: 0 !important;
     max-width: 10% !important;
+    background-color:rgb(213,176,115);
+}
+
+.card-container-front-end {
+    margin: 0px !important;
+    margin-top: 30px !important;
+}
+
+.card-container-front-end-image {
+    margin: 0px !important;
+    margin-top: 20px !important;
 }
 
 .jumbotron {
    height: calc(100vh - 170px); 
-   background-image: url("/assets/AknNoBckg.png");
+   background-image: url("/assets/AknNoBckg copy1.png");
    background-position-y: 65%;
    background-repeat: no-repeat;
    background-size: cover;
@@ -119,15 +156,37 @@ h1, h2, h3, h4, h5, h6 {
    align-items: center;
    justify-content:center;
    margin-bottom: 0%;
+   background-color: rgb(239, 223, 198) !important;
+   z-index: -1;
 }
+
+/* .jumbotron:before { 
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background-image: url("/assets/AknNoBckg\ copy1.png");
+    background-repeat: no-repeat;
+    background-position-y: 65%;
+    background-size: cover;
+    z-index: -0.9;
+    
+} */
 
 .jumbotron h1 {
     font-size: 900%;
+    z-index: 1;
+    color: #000;
 }
 
 .jumbotron p {
     font-size: 300%;
     font-weight: 320;
+    z-index: 1;
 }
 
 /* :hover :focuse remember to add these classes to the navbar */
@@ -159,6 +218,12 @@ h1, h2, h3, h4, h5, h6 {
     word-wrap: break-word;
     background-color: none;
     background-clip: border-box;
-    border: 5px solid rgba(0,0,0,.125);
+    background-color:rgb(213,176,115);
     border-radius: 0.25rem;
+    margin: 0px;
 }
+
+.container-fluid {
+    background-color:rgb(239,223,198);
+}
+
