--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(213,176,115) !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
     color: rgb(0, 0, 0);
     font-family: SansPro;
     text-align: center;
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* do not touch-makes nav weird white space fix*/
 .class-body {
-    padding: 3px;
+    /* padding: 3px; */
     background-color: rgb(213,176,115);
 }
 
@@ -53,6 +53,10 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgb(239, 223, 198) !important;
     text-align: left;
  }
+
+.my-jumbotroncopy {
+    width: 100%;
+}
 
  .display-4 {
     text-align: left;
@@ -74,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .main-card h5 {
     font-size: 2.5em;
-    font-weight:bolder;
+    font-weight: 900;
 }
 
 .row {
@@ -83,27 +87,68 @@ h1, h2, h3, h4, h5, h6 {
 
 /* End of navbar, jumbotron, main-nav. Above works and is simplified to the best of my ability */
 
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color:rgb(239,223,198);
+    background-clip: border-box;
+    border-radius: 0.25rem;
+    border-color: #000; 
+    /* padding: 10px; */
+    /* border: none; */
+}
+
+.card-project {
+    border-color: #000 !important;
+    border-width: 3px !important;
+    background-color:rgb(251, 244, 233);
+    border-radius: 11px;
+    max-height: 450px;
+    max-width: 400px;
+    box-shadow: 5px 14px ;
+}
+
+
+
+
+.card-title {
+    padding: 5px;
+}
+
+.card p {
+    padding: 10px;
+}
+
+.card a {
+    padding: 10px;
+}
+
+.card-o {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: none;
+    background-clip: border-box;
+    margin-top: 20px;
+}
+
+
 /* This controls the size of the contact icons */
 
 .card-body-nest img {
     max-width: 65px;
     background-color: none;
 }
-
-
-/* The card-body controls the size of skills icons */
-.card-body img {
-    max-width: 60px;
-    background-color: none;
-}
-
-
-
-
-
-
-
-
 
 .card-linkedin {
     align-items: flex-start;
@@ -117,33 +162,21 @@ h1, h2, h3, h4, h5, h6 {
     align-items: flex-end;
 }
 
-.card {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color:rgb(239,223,198);
-    background-clip: border-box;
-    border-radius: 0.25rem;
-    border-color: #000;
-    margin: 0px;
+/* The card-body and following styles control the size etc of skills icons */
+
+.card-front-end {
+    margin-top: 4%;
 }
 
-.card-o {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
+.card-skills {
+    margin-top: 4%;
+}
+
+
+
+.card-body img {
+    max-width: 53px;
     background-color: none;
-    background-clip: border-box;
-    align-items: center;
-    margin-top: 20px;
 }
 
 .css {
@@ -163,15 +196,38 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .big-s {
-    margin-left: 40px;
+    align-items: center;
+    margin-left: 20%;
 }
 
 .photoshop {
-    margin-right: 30px;
+    align-items: center;
+    margin-right: 20%;
+    margin-top: 13.5%;
 }
 
 .premiere {
     align-items: flex-start;
+    margin-top: 14%;
+}
+
+/* end of skills*/
+
+.card-about, .card-contact {
+    margin-top: 3%;
+}
+
+.card-contact {
+    margin-top: 15%;
+    align-items: flex-start;
+    
+}
+
+.card-contact h4 {
+    text-align: none !important;
+    border: 0px;
+    padding: 0px;
+    margin-left: 30px;
 }
 
 .container-fluid {
@@ -185,6 +241,19 @@ h1, h2, h3, h4, h5, h6 {
 .card-body {
     padding: 0;
 }
+
+.card-body h5 {
+    font-size: 2em;
+    font-weight: bolder;
+}
+
+
+
+
+
+
+
+
 
 
 .right-background {
@@ -217,33 +286,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.my-jumbotroncopy {
-    width: 100%;
-}
-
-
-
-.card-container-front-end {
-    margin: 0px !important;
-    margin-top: 30px !important;
-}
-
-.card-container-front-end-image {
-    margin: 0px !important;
-    margin-top: 20px !important;
-}
-
 .card-container-project {
-    margin-top: 2%;
-    align-items: center;
-    justify-items: center;
+    margin-top: 3%;
 }
-
-
 
 .card-container-second {
-    margin-top: 2%;
+    margin-top: 5%;
 }
+
+
+
+
+
 
 
 
@@ -266,3 +320,23 @@ h1, h2, h3, h4, h5, h6 {
     font-family: SansPro;
   }
 
+
+
+
+
+.main-card, .card-about, .card-contact, .card-body-nest, .card-front-end, .card-skills, .card-image, .left-background  {
+    border: none !important;
+}
+
+.card-contact h4 {
+    text-align: none !important;
+    padding: 0px;
+    font-size: 1.2em;
+    display: inline;
+}
+
+.card-contact a {
+    text-align: none !important;
+    border: 0px;
+    padding: 0px;
+}
