--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1, h2, h3, h5, h6 {
     border-bottom: 5px;
     border-color: black;
     border-width: 10px !important;
+    box-shadow: 0px 4px rgb(123, 99, 61);
 }
 
 .navbar-nav {
@@ -317,6 +318,14 @@ h1, h2, h3, h5, h6 {
 
 /* :hover :focuse remember to add these classes to the navbar */
 
+
+.project h4 {
+    border: 3px solid black;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+}
+
 .sign-up form {
     margin: 30px auto !important;
     align-items: center !important;
@@ -337,8 +346,8 @@ h1, h2, h3, h5, h6 {
 
 
 
-.main-card, .card-about, .card-contact, .card-body-nest, .card-front-end, .card-skills, .card-image, .left-background  {
-    /* border: none !important; */
+.card-about, .card-contact, .card-body-nest, .card-front-end, .card-skills, .card-image, .left-background  {
+    border: none !important;
 }
 
 .main-card {
@@ -364,9 +373,13 @@ h1, h2, h3, h5, h6 {
     padding: 0px;
 }
 
-nav {
+.my-navbar {
     background-color:rgb(213,176,115) !important;
-    border-bottom: 5px;
+    border-bottom: 2px;
     border-color: black !important;
-    border-width: 10px !important;
+    border-width: 5px !important;
+    border: 1px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
