--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@
 
 body {
     background-color: rgb(213,176,115) !important;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1, h2, h3, h5, h6 {
     color: rgb(0, 0, 0);
-    font-family: SansPro;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 }
 
@@ -126,9 +127,6 @@ h1, h2, h3, h5, h6 {
     box-shadow: 5px 14px ;
 }
 
-
-
-
 .card-title {
     padding: 5px;
 }
@@ -216,19 +214,6 @@ h1, h2, h3, h5, h6 {
     width: 2rem !important;
     height: 2rem !important;
 }
-
-/* .photoshop {
-    align-items: center;
-    margin-right: 20%;
-    margin-top: 13.5%;
-} */
-
-/* .premiere {
-    align-items: flex-start;
-    margin-top: 14%;
-} */
-
-/* end of skills*/
 
 
 .card-icon {
