--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ h1, h2, h3, h5, h6 {
 
 
 .right-background {
-    background-image: url(/assets/DevConcept.png);
+    background-image: url(../assets/DevConcept.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -287,7 +287,7 @@ h1, h2, h3, h5, h6 {
 
 
 .left-background {
-    background-image: url(/assets/pexels-thisisengineering-3861972.jpg);
+    background-image: url(../assets/pexels-thisisengineering-3861972.jpg);
     background-position-y: 62%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -333,7 +333,7 @@ h1, h2, h3, h5, h6 {
 
 @font-face {
     font-family: SansPro;
-    src: url("/assets/Source_Sans_Pro/SourceSansPro-Regular.ttf");
+    src: url("../assets/Source_Sans_Pro/SourceSansPro-Regular.ttf");
   }
   
   div {
